# ai_tally

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  tally_state.cpp  tally_state.h
cmake/: generate_version.cmake
cmake/patches/: restbed-boost-1.81.patch  restbed-cmake-version.patch  wxwidgets-v3.2.8-macos-memset_s.patch
config/: server_config.json
examples/: websocket_client.html
src/: config.cpp  config.h  gui_manager.cpp  gui_manager.h  main.cpp  sse_server.cpp  sse_server.h  tally_monitor.cpp  tally_monitor.h  tui_manager.cpp  tui_manager.h  version.h.in  websocket_server.cpp  websocket_server.h
src/atem/: atem_connection.cpp  atem_connection.h  atem_connection_mock.cpp  atem_connection_mock.h  atem_connection_real.cpp  atem_connection_real.h  atem_sdk_wrapper.cpp  atem_sdk_wrapper.h  iatem_connection.h  tally_state.cpp  tally_state.h
src/gui/: App.cpp  App.h  BackendService.cpp  BackendService.h  MainFrame.cpp  MainFrame.h  PreferencesDialog.cpp  PreferencesDialog.h  TallyPanel.cpp  TallyPanel.h  atem_tally_provider.cpp  atem_tally_provider.h  mock_tally_provider.cpp  mock_tally_provider.h  tally_provider.h
src/platform/: macos_platform.cpp  platform_interface.h  windows_platform.cpp
